--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,12 +4,7 @@
   box-sizing: border-box;
 }
 
-.hero_section {
-  background: url('D:/Codeistan/codeistan_task/src/images/hero.jpg') no-repeat;
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
-}
+
 
 .hero_section_image {
  
@@ -23,12 +18,7 @@
   width: 50px;
 }
 
-.history_section {
-  background: url('D:/Codeistan/codeistan_task/src/images/peak.jpg') no-repeat;
-  background-size: cover;
-  height: 800px;
-  width: 100vw;
-}
+
 
 .heading_pad{
   font-size: 30px;
@@ -46,7 +36,7 @@
 
 .carosel-bg {
   background: rgba(65, 79, 107, 0.8);
-  margin-top: 18%;
+  margin-top: 14%;
 }
 
 
@@ -91,21 +81,7 @@
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-.schedule_section {
-  background: url('D:/Codeistan/codeistan_task/src/images/photo-1417021423914-070979c8eb34.jpg') no-repeat;
-  background-size: cover;
-  height: 800px;
-  width: 100vw;
-  position: relative;
-}
 
-.schedule_section2 {
-  background: url('D:/Codeistan/codeistan_task/src/images/photo-1443980995706-8d107e98e707.jpg') no-repeat;
-  background-size: cover;
-  height: 800px;
-  width: 100vw;
-  position: relative;
-}
 
 
 .schedule_overlay {
@@ -188,17 +164,20 @@
   }
   /* Remove background images and heights */
   .hero_section,
-  .history_section,
+  
   .climb_section {
     background: none;
     height: auto;
   }
-
+  .history_section{
+    background: none;
+  }
   /* Reduce text size */
   .text_section {
     font-size: 14px;
     margin-top: 40px;
   }
+  
   .hero_section {
     display: none;
   }
@@ -211,6 +190,7 @@
 .carosel_bg_image2{
 display: none;
 }
+
 .heading_pad{
   font-size: 30px;
   color: #43516c;
